# crypto_trading

./: .gitignore  FIX_AUTH.md  PUBLISH_GUIDE.md  QUICK_UPLOAD.md  README.md  SKILL.md  UPLOAD_TOKEN_GUIDE.md  publish.sh  pyproject.toml  requirements-standard-bot-mvp.txt  requirements.txt  setup_pypi_token.sh  standard_trading_bot_pdf.md  upload_with_token.sh
crypto_trading/: get_futures_data.py  get_trending_data.py
crypto_trading/backtesting/: README.md  example.py  factor_test.py  framework.py  strategy_backtest.py
crypto_trading/get_data/: get_futures_data.py  get_futures_data_v2.py  get_trending_data.py
crypto_trading/test_script/: README.md  get_symbols_by_volume.py  realtime_price_tracker.py  test_alpha.py  test_kline_data.py  test_order.py
crypto_trading/trading_signal/: README.md  example_usage.py
crypto_trading/trading_signal/factor/: ma_factor.py  rsi_factor.py
crypto_trading/trading_signal/selected_alpha/: test_alpha.py
crypto_trading/trading_signal/signal/: factor_based_signal.py  ma_signal.py
cyqnt_trd/: __init__.py  get_ip.sh
cyqnt_trd/get_data/: get_trending_data.py
cyqnt_trd/standard_bot/: __init__.py  config.py
cyqnt_trd/standard_bot/core/: __init__.py  contracts.py
cyqnt_trd/standard_bot/data/: __init__.py  _ssl_utils.py  adapters.py  alignment.py  cme.py  derivatives.py  downloader.py  historical.py  interfaces.py  liquidations.py  snapshot.py
cyqnt_trd/standard_bot/entrypoints/: __init__.py  cme_hf_ingest.py  cme_ingest.py  cme_yfinance_ingest.py  common.py  mvp_backtest.py  mvp_mainnet_execution.py  mvp_monitor_http.py  mvp_paper.py  mvp_paper_daemon.py  mvp_run_manager.py  mvp_runtime_consistency.py  mvp_testnet_execution.py  mvp_testnet_ma_demo.py  mvp_testnet_roundtrip.py
cyqnt_trd/standard_bot/execution/: __init__.py  binance_futures_mainnet.py  binance_futures_testnet.py  idempotency.py  interfaces.py  paper.py  rules.py
cyqnt_trd/standard_bot/runtime/: __init__.py  interfaces.py  run_manager.py  runner.py
cyqnt_trd/standard_bot/signal/: __init__.py  encoders.py  interfaces.py  numba_kernels.py  plugins.py  registry.py
cyqnt_trd/standard_bot/simulation/: __init__.py  execution_kernels.py  interfaces.py  live_paper_session.py  runner.py  (+2 more)
cyqnt_trd/strategy_cases/: README.md  SUPPORT_MATRIX.md  __init__.py  catalog.json
cyqnt_trd/tmp/: get_kline_with_factor_n_points_result.parquet  test_data.ipynb
docs/: cme_mnq_backtest.md  cyqnt_trd_0_1_9_dev0_tutorial.md  standard_bot_migration.md  standard_bot_mvp.md  standard_bot_progress_2026-04-09.md  standard_bot_progress_2026-04-09_CN.md
docs/backtests/: btc_ma_cross_1h_500.json  btc_ma_cross_numba_1h_120.json  btc_mtf_ma_cross_5m_1h_20_20_90d_summary.md  btc_mtf_ma_spread_5m_1h_20_20_600.json  btc_oi_funding_breakout_30d.json  btc_price_ma_1h_500.json  eth_liquidation_reversal_mvp.json  eth_ma_cross_1h_500.json  eth_price_ma_1h_500.json  llm_strategy_evolution_2026-04-13.json  llm_strategy_evolution_2026-04-13.md  ma_backtest_suite_2026-04-09.md  mnq_nq_proxy_mtf_ma_spread_5m_15m_2025.json  sol_ma_cross_1h_500.json  sol_price_ma_1h_500.json
docs/signal_specs/: multi_timeframe_ma_spread_CN.md
mvp_strategy_lab/: plot_high_sharpe_strategies.py
mvp_strategy_lab/results/: mvp_evolution_20260416_142606.json  mvp_evolution_20260416_142606.md  mvp_evolution_50x20x5_20260416_full.csv  mvp_evolution_50x20x5_20260416_full.json  mvp_evolution_50x20x5_20260416_full.md  mvp_evolution_stage2_50x20x5_20260416_full.csv  mvp_evolution_stage2_50x20x5_20260416_full.json  mvp_evolution_stage2_50x20x5_20260416_full.md
scripts/: llm_strategy_evolution.py
test/: pypi_setup.sh
tests/: test_strategy_cases.py
tests/standard_bot/: test_cme_data.py  test_config_and_execution.py  test_historical_data.py  test_monitor_http.py  test_multi_timeframe_ma_signal.py  test_mvp_backtest.py  test_numba_backtest.py  test_paper_runtime.py  test_run_manager.py  test_runtime_consistency.py  test_signal_alignment.py  test_signal_plugins.py
(+847 files in other folders)
