[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyqnt-trd"
version = "0.1.9.dev"
description = "A cryptocurrency trading toolkit centered on the standard_bot backtesting, paper signal, and execution workflow"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Haowen Wang", email = "wanghw@zju.edu.cn"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.8,<3.11"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.23.0,<1.25.0",
    "polars>=1.0,<2.0",
    "numba>=0.60,<0.62",
    "pyarrow>=16.1.0",
    "matplotlib>=3.5.0,<3.8.0",
    "scipy>=1.9.0,<1.11.0",
    "requests>=2.32.0",
    "binance-sdk-spot",
    "binance-sdk-derivatives-trading-usds-futures",
    "binance-sdk-algo",
    "binance-common"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "black>=22.0.0,<24.0.0",
    "ruff>=0.1.0,<0.2.0",
]

[project.urls]
Homepage = "https://github.com/nthu-chung/crypto_trading"
Repository = "https://github.com/nthu-chung/crypto_trading"
Issues = "https://github.com/nthu-chung/crypto_trading/issues"

[tool.setuptools]
# 自动发现所有包和子包
packages = { find = {} }

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.json"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
