[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyqnt-trd"
version = "0.1.9.dev2"
description = "A cryptocurrency trading toolkit centered on the standard_bot backtesting, paper signal, and execution workflow"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Haowen Wang", email = "wanghw@zju.edu.cn"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.8,<3.12"
dependencies = [
    "pandas==2.3.3",
    "numpy==1.24.4",
    "polars==1.0.0",
    "numba==0.60.0",
    "pyarrow==21.0.0",
    "matplotlib==3.7.5",
    "scipy==1.10.1",
    "requests==2.32.5",
    "websockets==16.0",
    "binance-sdk-spot==8.2.1",
    "binance-sdk-derivatives-trading-usds-futures==10.0.1",
    "binance-sdk-algo==2.6.0",
    "binance-common==3.8.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "black>=22.0.0,<24.0.0",
    "ruff>=0.1.0,<0.2.0",
]
market-data = [
    "yfinance>=0.2.38",
]

[project.urls]
Homepage = "https://github.com/nthu-chung/crypto_trading"
Repository = "https://github.com/nthu-chung/crypto_trading"
Issues = "https://github.com/nthu-chung/crypto_trading/issues"

[tool.setuptools]
# 自动发现所有包和子包
packages = { find = {} }

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.json"]
"cyqnt_trd.strategy_cases" = ["*.md", "*.json", "cases/*/*.md", "cases/*/*.json"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
